...
            child: Form(
              key: key,
              child: Column(
                mainAxisAlignment: MainAxisAlignment.center,
                children: <Widget>[
                  TextFormField(
                    key: ValueKey("emailId"),
                    decoration: InputDecoration(
                      labelText: "Email",
                      hintText: "Enter your email",

                    ),
                    validator: (value) => Validator().validateEmail(value),

                  ),
                  TextFormField(
                    key: ValueKey("password"),
                    decoration: InputDecoration(
                      labelText: "Password",
                      hintText: "Enter your password",
                    ),
                    validator: (value) => Validator().validatePassword(value),
                  ),
...
